--- a/page23.html
+++ b/page23.html
@@ -202,6 +202,19 @@
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://meet.google.com/ghg-iuuz-qaq" class="btn btn-primary item-btn display-7" target="_blank">Acesso ao apresentador</a></div>
                 </div>
+            </div><div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <a href="https://meet.google.com/hcq-sogg-cir" target="_blank"><img src="assets/images/thalles-benitez-696x928.png" alt="" title="" data-slide-to="2" data-bs-slide-to="3"></a>
+                    </div>
+                    <div class="item-content">
+                        
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Out-of-Equilibrium Vortex Dynamics: vortex interaction with
+</strong><div><strong>defects and transport currents</strong></div></h6>
+                        
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://meet.google.com/hcq-sogg-cir" class="btn btn-primary item-btn display-7" target="_blank">Acesso ao apresentador</a></div>
+                </div>
             </div>
 
 
@@ -251,7 +264,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website creator - <a href="https://mobirise.site/n" style="color:#aaa;">Click here</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/c" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">page</a> creator</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
